--- a/Btools/Setconfig/NEWIFI3_test2.config
+++ b/Btools/Setconfig/NEWIFI3_test2.config
@@ -108,7 +108,7 @@ CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ### Include WebUI international resources. Increased firmware size
 CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
-#CONFIG_FIRMWARE_INCLUDE_LANG_BR=n
+CONFIG_FIRMWARE_INCLUDE_LANG_EN=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_CZ=n
 #CONFIG_FIRMWARE_INCLUDE_LANG_DA=n
 #CONFIG_FIRMWARE_INCLUDE_LANG_DE=n
